working for second time

--- a/htm.html
+++ b/htm.html
@@ -6,6 +6,8 @@
     <title>HTML</title>
 </head>
 <body>
+    <h1>NOW I UNDERSTOOD GIT</h1>
     <p>CHECKING THE GIT</p>
+    <h3>ok</h3>
 </body>
-</html>
+</html> 
